--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,10 @@ matplotlib-inline==0.1.7
     # via ipython
 nodeenv==1.9.1
     # via pre-commit
+numpy==2.3.2
+    # via pandas
+pandas==2.3.2
+    # via everything-i-know-about-python (pyproject.toml)
 parso==0.8.5
     # via jedi
 pexpect==4.9.0
@@ -42,8 +46,14 @@ pygments==2.19.2
     # via
     #   ipython
     #   ipython-pygments-lexers
+python-dateutil==2.9.0.post0
+    # via pandas
+pytz==2025.2
+    # via pandas
 pyyaml==6.0.2
     # via pre-commit
+six==1.17.0
+    # via python-dateutil
 stack-data==0.6.3
     # via ipython
 traitlets==5.14.3
@@ -52,6 +62,8 @@ traitlets==5.14.3
     #   matplotlib-inline
 typing-extensions==4.15.0
     # via ipython
+tzdata==2025.2
+    # via pandas
 virtualenv==20.34.0
     # via pre-commit
 wcwidth==0.2.13
