--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ipython>=9.4.0",
+    "jupyter>=1.1.1",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pre-commit>=4.3.0",
