--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "ipython>=9.4.0",
     "jupyter>=1.1.1",
+    "mkdocs>=1.6.1",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pre-commit>=4.3.0",
