feat(docs): add mkdocs-material and configure theme in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,12 @@
-site_name: My Docs
+site_name: Everything About Python
+theme:
+  name: material
+  palette:
+    scheme: default
+    primary: indigo
+    accent: indigo
+  features:
+    - navigation.instant
+    - navigation.tracking
+    - search.suggest
+    - search.highlight
