--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "ipython>=9.4.0",
     "jupyter>=1.1.1",
     "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.18",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
     "pre-commit>=4.3.0",
