--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,7 @@ dependencies = [
     "mkdocs-material>=9.6.18",
     "numpy>=2.3.2",
     "pandas>=2.3.2",
+    "password[bcrypt]>=0.2",
     "pre-commit>=4.3.0",
+    "pyjwt>=2.10.1",
 ]
